--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "keywords": ["plist", "lint", "syntax"],
   "repository": "https://github.com/baleyko/plistlint.git",
   "bugs": "https://github.com/baleyko/plistlint/issues",
+  "bin": {
+    "plistlint": "bin/plistlint"
+  },
   "dependencies": {
     "optionator": "0.8.3",
     "xmldom": "0.1.27",
