chore(ci): add 'yarn install' to steps of the test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,4 @@ jobs:
         os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v1
-
-    - name: List npm dependencies
-      run: npm list
+    - run: yarn install
